--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         </div>
         
         <div class="gallery">
-            <img src="/api/placeholder/300/300" alt="Ceramic piece 1">
+            <img src="bodhiswan_348455879_578736824387942_7902606742957668195_n.jpg/300/300" alt="Ceramic piece 1">
             <img src="/api/placeholder/300/300" alt="Ceramic piece 2">
             <img src="/api/placeholder/300/300" alt="Ceramic piece 3">
             <img src="/api/placeholder/300/300" alt="Ceramic piece 4">
