--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
             border-radius: 4px;
             transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
             box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            background-color: #eee; /* Placeholder color while loading */
         }
 
         .gallery img:hover {
@@ -204,8 +205,8 @@
         </div>
         
         <div class="gallery">
-            <img src="bodhiswan_348455879_578736824387942_7902606742957668195_n.jpg/300/300" alt="Ceramic piece 1">
-            <img src="/api/placeholder/300/300" alt="Ceramic piece 2">
+            <img src="bodhiswan_348455879_578736824387942_7902606742957668195_n.jpg" alt="Ceramic piece 1" loading="lazy">
+            <img src="bodhiswan_348471159_3630382333858035_296460734488849167_n.jpg" alt="Ceramic piece 2" loading="lazy">
             <img src="/api/placeholder/300/300" alt="Ceramic piece 3">
             <img src="/api/placeholder/300/300" alt="Ceramic piece 4">
         </div>
