--- a/index.html
+++ b/index.html
@@ -3,7 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bodhi Swan Ceramics</title>
+    
+    <!-- Primary Meta Tags -->
+    <title>Bodhi Swan Ceramics | Handcrafted Pottery in Brisbane</title>
+    <meta name="title" content="Bodhi Swan Ceramics | Handcrafted Pottery in Brisbane">
+    <meta name="description" content="Discover handcrafted ceramic pieces that blend traditional throwing techniques with contemporary design. Brisbane-based artisan creating functional pottery since 2020.">
+    <meta name="keywords" content="ceramics, pottery, Brisbane pottery, handmade ceramics, ceramic art, Bodhi Swan, artisan pottery, functional ceramics, handcrafted pottery, Australian ceramics">
+    <meta name="author" content="Bodhi Swan Ceramics">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://bodhiswan.github.io/">
+    <meta property="og:title" content="Bodhi Swan Ceramics | Handcrafted Pottery in Brisbane">
+    <meta property="og:description" content="Discover handcrafted ceramic pieces that blend traditional throwing techniques with contemporary design. Brisbane-based artisan creating functional pottery since 2020.">
+    <meta property="og:image" content="bodhiswan_348455879_578736824387942_7902606742957668195_n.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://bodhiswan.github.io/">
+    <meta property="twitter:title" content="Bodhi Swan Ceramics | Handcrafted Pottery in Brisbane">
+    <meta property="twitter:description" content="Discover handcrafted ceramic pieces that blend traditional throwing techniques with contemporary design. Brisbane-based artisan creating functional pottery since 2020.">
+    <meta property="twitter:image" content="bodhiswan_348455879_578736824387942_7902606742957668195_n.jpg">
+
     <style>
         * {
             margin: 0;
@@ -62,7 +84,8 @@
         .logo {
             width: 100px;
             height: 100px;
-            object-fit: contain;
+            object-fit: cover;
+            border-radius: 50%;
             filter: drop-shadow(0 4px 6px rgba(0,0,0,0.1));
             transition: transform 0.3s ease;
         }
@@ -96,7 +119,7 @@
             border-radius: 4px;
             transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
             box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-            background-color: #eee; /* Placeholder color while loading */
+            background-color: #eee;
         }
 
         .gallery img:hover {
@@ -200,15 +223,15 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="/api/placeholder/100/100" alt="Bodhi Swan Ceramics Logo" class="logo">
+            <img src="348982356_573566748281355_5155277251296915931_n.jpg" alt="Bodhi Swan Ceramics Logo" class="logo">
             <h1>Bodhi Swan Ceramics</h1>
         </div>
         
         <div class="gallery">
-            <img src="bodhiswan_348455879_578736824387942_7902606742957668195_n.jpg" alt="Ceramic piece 1" loading="lazy">
-            <img src="bodhiswan_348471159_3630382333858035_296460734488849167_n.jpg" alt="Ceramic piece 2" loading="lazy">
-            <img src="/api/placeholder/300/300" alt="Ceramic piece 3">
-            <img src="/api/placeholder/300/300" alt="Ceramic piece 4">
+            <img src="bodhiswan_348455879_578736824387942_7902606742957668195_n.jpg" alt="Handcrafted ceramic bowl with unique glaze pattern" loading="lazy">
+            <img src="bodhiswan_348471159_3630382333858035_296460734488849167_n.jpg" alt="Contemporary ceramic vase with minimalist design" loading="lazy">
+            <img src="bodhiswan_348863468_1167309003909433_5762684848837982962_n.jpg" alt="Artisanal pottery piece showcasing traditional techniques" loading="lazy">
+            <img src="bodhiswan_349131030_7008228542527475_7205180136632410620_n.jpg" alt="Modern ceramic creation with distinctive finish" loading="lazy">
         </div>
 
         <div class="bio">
