--- a/index.html
+++ b/index.html
@@ -145,46 +145,81 @@
             transform: translateY(-2px);
         }
 
-        .links {
+        .contact-section {
             margin-top: 2rem;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 1.5rem;
+        }
+
+        .links {
             display: flex;
             justify-content: center;
             gap: 1rem;
         }
 
-        .button {
-            display: inline-block;
-            padding: 0.7rem 1.5rem;
-            background: #333;
-            color: white;
-            text-decoration: none;
-            border-radius: 4px;
-            transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
-            font-size: 0.9rem;
-            position: relative;
-            overflow: hidden;
+        .contact-info {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 0.5rem;
+            font-size: 1.1rem;
+            color: #666;
         }
 
-        .button::after {
+        .contact-link {
+            color: #666;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        .contact-link:hover {
+            color: #333;
+        }
+
+        .button {
+            display: inline-block;
+            padding: 0.8rem 2rem;
+            background: transparent;
+            color: #333;
+            text-decoration: none;
+            border: 2px solid #333;
+            border-radius: 25px;
+            transition: all 0.3s ease;
+            font-size: 0.9rem;
+            font-weight: 500;
+            letter-spacing: 0.5px;
+            position: relative;
+            overflow: hidden;
+            z-index: 1;
+        }
+
+        .button::before {
             content: '';
             position: absolute;
-            top: -50%;
-            left: -50%;
-            width: 200%;
-            height: 200%;
-            background: rgba(255,255,255,0.1);
-            transform: rotate(45deg);
-            transition: transform 0.3s ease;
+            top: 0;
+            left: 0;
+            width: 0%;
+            height: 100%;
+            background: #333;
+            transition: all 0.3s ease;
+            z-index: -1;
         }
 
         .button:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-            background: #444;
+            color: #fff;
+            transform: translateY(-3px);
+            box-shadow: 0 6px 15px rgba(0,0,0,0.1);
         }
 
-        .button:hover::after {
-            transform: rotate(45deg) translate(50%, 50%);
+        .button:hover::before {
+            width: 100%;
+        }
+
+        .button:active {
+            transform: translateY(-1px);
+            box-shadow: 0 3px 8px rgba(0,0,0,0.1);
         }
 
         @media (max-width: 768px) {
@@ -207,14 +242,7 @@
                 height: 200px;
             }
 
-            .links {
-                flex-direction: column;
-                align-items: center;
-            }
-
             .button {
-                width: 60%;
-                max-width: 200px;
                 text-align: center;
             }
         }
@@ -235,13 +263,27 @@
         </div>
 
         <div class="bio">
-            Beginning my pottery journey in 2020 at the Logan Artists Association, I've developed a deep passion for ceramics while working from my home studio in Brisbane. My practice combines traditional throwing techniques with contemporary design, creating functional pieces that bring artistry to everyday life.
+            As a wheel-thrown ceramics artist, I create my pieces between my home studio and Indooroopilly Ceramics Studio, where I also share my passion for pottery as a teacher. My practice focuses on the art of throwing on the wheel, crafting functional pieces that blend traditional techniques with contemporary design.
+            <p class="lesson-info">Private lessons are available upon request - please email or text using the contact information below.</p>
         </div>
+        
+        <style>
+            .lesson-info {
+                margin-top: 1rem;
+                font-style: italic;
+                color: #555;
+            }
+        </style>
 
-        <div class="links">
-            <a href="https://etsy.com/shop/YourShop" target="_blank" rel="noopener" class="button">Shop on Etsy</a>
-            <a href="https://instagram.com/bodhiswan" target="_blank" rel="noopener" class="button">Instagram</a>
-            <a href="mailto:swan1995@gmail.com" class="button">Contact</a>
+        <div class="contact-section">
+            <div class="links">
+                <a href="https://etsy.com/shop/YourShop" target="_blank" rel="noopener" class="button">Shop on Etsy</a>
+                <a href="https://instagram.com/bodhiswan" target="_blank" rel="noopener" class="button">Instagram</a>
+            </div>
+            <div class="contact-info">
+                <a href="mailto:swan1995@gmail.com" class="contact-link">swan1995@gmail.com</a>
+                <a href="tel:0478756284" class="contact-link">0478 756 284</a>
+            </div>
         </div>
     </div>
 </body>
