--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <!-- Favicon and App Icons -->
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Bodhi Swan" />
+    <link rel="manifest" href="/site.webmanifest" />
+    
     <!-- Primary Meta Tags -->
     <title>Bodhi Swan Ceramics | Handcrafted Pottery in Brisbane</title>
     <meta name="title" content="Bodhi Swan Ceramics | Handcrafted Pottery in Brisbane">
