--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <meta property="twitter:title" content="Bodhi Swan Ceramics | Handcrafted Pottery in Brisbane">
     <meta property="twitter:description" content="Discover handcrafted ceramic pieces that blend traditional throwing techniques with contemporary design. Brisbane-based artisan creating functional pottery since 2020.">
     <meta property="twitter:image" content="bodhiswan_348455879_578736824387942_7902606742957668195_n.jpg">
-
+    
     <style>
         * {
             margin: 0;
@@ -149,8 +149,105 @@
             transition: transform 0.3s ease;
         }
 
+        .lesson-info {
+            margin-top: 1rem;
+            font-style: italic;
+            color: #555;
+        }
+
         .bio:hover {
             transform: translateY(-2px);
+        }
+
+        .shop-section {
+            display: none;
+            margin: 4rem auto;
+            padding: 0 1rem;
+            max-width: 1200px;
+            animation: fadeIn 0.5s ease-out;
+        }
+
+        .shop-section.visible {
+            display: block;
+        }
+
+        .product-card {
+            background: white;
+            border-radius: 12px;
+            overflow: hidden;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .product-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 5px 20px rgba(0,0,0,0.1);
+        }
+
+        .product-image {
+            width: 100%;
+            height: 300px;
+            object-fit: cover;
+            background-color: #f8f8f8;
+        }
+
+        .product-info {
+            padding: 1.5rem;
+        }
+
+        .product-title {
+            font-size: 1.2rem;
+            font-weight: 500;
+            margin-bottom: 0.5rem;
+        }
+
+        .product-description {
+            font-size: 0.9rem;
+            color: #666;
+            margin-bottom: 1rem;
+            line-height: 1.6;
+        }
+
+        .product-metadata {
+            font-size: 0.85rem;
+            color: #888;
+            margin-bottom: 1rem;
+        }
+
+        .product-price {
+            font-size: 1.3rem;
+            font-weight: 600;
+            margin-bottom: 1.5rem;
+        }
+
+        .buy-button {
+            display: inline-block;
+            padding: 0.8rem 2rem;
+            background: transparent;
+            color: #333;
+            text-decoration: none;
+            border: 2px solid #333;
+            border-radius: 25px;
+            transition: all 0.3s ease;
+            font-size: 0.9rem;
+            font-weight: 500;
+            letter-spacing: 0.5px;
+            cursor: pointer;
+            width: 100%;
+            text-align: center;
+        }
+
+        .buy-button:hover {
+            background: #333;
+            color: white;
+            transform: translateY(-2px);
+        }
+
+        .shop-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 2rem;
+            margin-top: 2rem;
         }
 
         .contact-section {
@@ -274,25 +371,29 @@
             As a wheel-thrown ceramics artist, I create my pieces between my home studio and Indooroopilly Ceramics Studio, where I also share my passion for pottery as a teacher. My practice focuses on the art of throwing on the wheel, crafting functional pieces that blend traditional techniques with contemporary design.
             <p class="lesson-info">Private lessons are available upon request - please email or text using the contact information below.</p>
         </div>
-        
-        <style>
-            .lesson-info {
-                margin-top: 1rem;
-                font-style: italic;
-                color: #555;
-            }
-        </style>
 
         <div class="contact-section">
             <div class="links">
-                <a href="https://etsy.com/shop/YourShop" target="_blank" rel="noopener" class="button">Shop on Etsy</a>
+                <button onclick="toggleShop()" class="button" id="shopToggle">View Available Works</button>
                 <a href="https://instagram.com/bodhiswan" target="_blank" rel="noopener" class="button">Instagram</a>
             </div>
+
             <div class="contact-info">
                 <a href="mailto:swan1995@gmail.com" class="contact-link">swan1995@gmail.com</a>
                 <a href="tel:0478756284" class="contact-link">0478 756 284</a>
             </div>
         </div>
-    </div>
-</body>
-</html>
+
+        <!-- Shop Section -->
+        <section class="shop-section" id="shopSection">
+            <h2 style="text-align: center; font-size: 2rem; font-weight: 300; margin-bottom: 2rem;">Available Works</h2>
+            <div class="shop-grid">
+                <div class="product-card">
+                    <img src="bodhiswan_348455879_578736824387942_7902606742957668195_n.jpg" alt="Hand-thrown espresso cup with smooth glaze finish" class="product-image" loading="lazy">
+                    <div class="product-info">
+                        <h3 class="product-title">Handcrafted Espresso Cup</h3>
+                        <p class="product-description">A meticulously wheel-thrown espresso cup, perfect for your morning ritual. Features a smooth interior glaze and natural exterior finish.</p>
+                        <div class="product-metadata">
+                            <p>Dimensions: 6cm x 6cm x 7cm</p>
+                            <p>Materials: Stoneware clay, Clear glaze interior</p>
+                            <p>Care: Dishwasher and microwave safe</p
