--- a/index.html
+++ b/index.html
@@ -1,41 +1,4 @@
-.contact-section {
-            margin-top: 2rem;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 1.5rem;
-        }
-
-        .links {
-            display: flex;
-            justify-content: center;
-            gap: 1rem;
-        }
-
-        .contact-info {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 0.5rem;
-            font-size: 1.1rem;
-            color: #666;
-        }
-
-        .contact-link {
-            color: #666;
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
-
-        .contact-link:hover {
-            color: #333;
-        }
-
-        .shop-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 2rem;
-            <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -397,21 +360,11 @@
             <h1>Bodhi Swan Ceramics</h1>
         </div>
         
-        <div class="shop-grid">
-            <div class="product-card">
-                <img src="bodhiswan_348455879_578736824387942_7902606742957668195_n.jpg" alt="Hand-thrown espresso cup with smooth glaze finish" class="product-image" loading="lazy">
-                <div class="product-info">
-                    <h3 class="product-title">Handcrafted Espresso Cup</h3>
-                    <p class="product-description">A meticulously wheel-thrown espresso cup, perfect for your morning ritual. Features a smooth interior glaze and natural exterior finish.</p>
-                    <div class="product-metadata">
-                        <p>Dimensions: 6cm x 6cm x 7cm</p>
-                        <p>Materials: Stoneware clay, Clear glaze interior</p>
-                        <p>Care: Dishwasher and microwave safe</p>
-                    </div>
-                    <div class="product-price">$35.00</div>
-                    <button class="buy-button" onclick="alert('Stripe integration coming soon!')">Purchase</button>
-                </div>
-            </div>
+        <div class="gallery">
+            <img src="bodhiswan_348455879_578736824387942_7902606742957668195_n.jpg" alt="Handcrafted ceramic bowl with unique glaze pattern" loading="lazy">
+            <img src="bodhiswan_348471159_3630382333858035_296460734488849167_n.jpg" alt="Contemporary ceramic vase with minimalist design" loading="lazy">
+            <img src="bodhiswan_348863468_1167309003909433_5762684848837982962_n.jpg" alt="Artisanal pottery piece showcasing traditional techniques" loading="lazy">
+            <img src="bodhiswan_349131030_7008228542527475_7205180136632410620_n.jpg" alt="Modern ceramic creation with distinctive finish" loading="lazy">
         </div>
 
         <div class="bio">
