--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 
         <div class="contact-section">
             <div class="links">
-                <a href="https://bodhiswan.com/shop" target="_blank" rel="noopener" class="button">View Available Works</a>
+                <a href="shop.html" class="button">View Available Works</a>
                 <a href="https://instagram.com/bodhiswan" target="_blank" rel="noopener" class="button">Instagram</a>
             </div>
 
