--- a/index.html
+++ b/index.html
@@ -374,13 +374,15 @@
 
         <div class="contact-section">
             <div class="links">
-                <a href="shop.html" class="button">View Available Works</a>
+                <a href="shop.html" class="button">Shop</a>
                 <a href="https://instagram.com/bodhiswan" target="_blank" rel="noopener" class="button">Instagram</a>
             </div>
 
             <div class="contact-info">
+                <span class="contact-link">Taringa, Queensland</span>
                 <a href="mailto:swan1995@gmail.com" class="contact-link">swan1995@gmail.com</a>
                 <a href="tel:0478756284" class="contact-link">0478 756 284</a>
+                <span class="social-handle">@bodhiswan</span>
             </div>
         </div>
 
