--- a/shop.html
+++ b/shop.html
@@ -216,6 +216,23 @@
                     <div id="error-message" class="error-message"></div>
                 </div>
             </div>
+
+            <div class="product-card custom-order">
+                <img src="bodhiswan_348471159_3630382333858035_296460734488849167_n.jpg" 
+                     alt="Custom ceramics by Bodhi Swan" 
+                     class="product-image" 
+                     loading="lazy">
+                <div class="product-info">
+                    <h2 class="product-title">Custom Order</h2>
+                    <p class="product-description">Looking for something special? I create custom pieces tailored to your preferences. From personalized cups to unique sets, let's bring your vision to life.</p>
+                    <div class="product-metadata">
+                        <p>• Personalized designs</p>
+                        <p>• Custom sizes available</p>
+                        <p>• Collaborative process</p>
+                    </div>
+                    <a href="custom-order.html" class="buy-button" style="text-decoration: none;">Request Custom Order</a>
+                </div>
+            </div>
         </div>
     </div>
 
