--- a/shop.html
+++ b/shop.html
@@ -223,14 +223,15 @@
                      class="product-image" 
                      loading="lazy">
                 <div class="product-info">
-                    <h2 class="product-title">Custom Order</h2>
+                    <h2 class="product-title">Custom Commissions</h2>
                     <p class="product-description">Looking for something special? I create custom pieces tailored to your preferences. From personalized cups to unique sets, let's bring your vision to life.</p>
                     <div class="product-metadata">
                         <p>• Personalized designs</p>
                         <p>• Custom sizes available</p>
-                        <p>• Collaborative process</p>
+                        <p>• Made to order</p>
                     </div>
-                    <a href="custom-order.html" class="buy-button" style="text-decoration: none;">Request Custom Order</a>
+                    <div class="product-price">Minimum $100</div>
+                    <a href="custom-order.html" class="buy-button" style="text-decoration: none;">Request Commission</a>
                 </div>
             </div>
         </div>
