--- a/custom-order.html
+++ b/custom-order.html
@@ -64,6 +64,14 @@
             color: #2c2c2c;
         }
 
+                <h1>Custom Order Request</h1>
+        
+        <div style="text-align: center; margin-bottom: 2rem; color: #666; max-width: 600px; margin-left: auto; margin-right: auto;">
+            Share your vision and let's create something unique together. Start by providing a few details below.
+        </div>
+
+        <form id="customOrderForm">
+
         .form-group {
             margin-bottom: 1.5rem;
         }
