--- a/shop.html
+++ b/shop.html
@@ -212,6 +212,8 @@
                         <p>Care: Dishwasher and microwave safe</p>
                     </div>
                     <div class="product-price">$100.00</div>
+                    <label for="quantity">Quantity:</label>
+                    <input type="number" id="quantity" name="quantity" min="1" value="1" style="width: 60px; margin-bottom: 1rem;">
                     <button id="buy-button" class="buy-button">Purchase</button>
                     <div id="error-message" class="error-message"></div>
                 </div>
